adds permissions for the maps to work in android

--- a/MeetupApp/MeetupApp/Views/EventsPage.xaml
+++ b/MeetupApp/MeetupApp/Views/EventsPage.xaml
@@ -38,7 +38,8 @@
                           HeightRequest="500"
                           x:Name="eventsMap"
                           IsShowingUser="True"
-                          MapType="Hybrid"/>
+                          MapType="Hybrid"
+                          HorizontalOptions="CenterAndExpand"/>
 
                 <Grid Margin="10"
                       HorizontalOptions="CenterAndExpand"
