sets the row height for the list view

--- a/MeetupApp/MeetupApp/Views/EventsPage.xaml
+++ b/MeetupApp/MeetupApp/Views/EventsPage.xaml
@@ -105,7 +105,8 @@
 
                     <Grid>
                         <ListView ItemsSource="{Binding SearchResults}"
-                                      SelectedItem="{Binding SelectedGroup, Mode=TwoWay}">
+                                      SelectedItem="{Binding SelectedGroup, Mode=TwoWay}"
+                                  RowHeight="150">
                             <ListView.ItemTemplate>
                                 <DataTemplate>
                                     <ViewCell>
