centers the activity indicator

--- a/MeetupApp/MeetupApp/Views/EventsPage.xaml
+++ b/MeetupApp/MeetupApp/Views/EventsPage.xaml
@@ -94,6 +94,7 @@
                                        IsEnabled="True"
                                        IsRunning="{Binding IsLoading}"
                                        Color="White"
+                                       HorizontalOptions="CenterAndExpand"
                                        Grid.Row="2"/>
                 </Grid>
 
